--- a/index.html
+++ b/index.html
@@ -2,31 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework Quiz!</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quiz</title>
+    <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <body>
-    <div id="start"> Start Quiz!</div>
-    <div id="quiz"> style = "display : none;"
-        <div id="qImage"> <img src="img.png"></div>
-        <div id="question"> <p> Question </p> </div>
-            <div id="timer"></div>
-                <div id="counter"> 6 </div>
+    <div id="container">
+        <div id="start">Start Quiz!</div>
+        <div id="quiz" style="display: none">
+            <div id="question"></div>
+            <div id="qImg"></div>
+            <div id="choices">
+                <div class="choice" id="A" onclick="checkAnswer('A')"></div>
+                <div class="choice" id="B" onclick="checkAnswer('B')"></div>
+                <div class="choice" id="C" onclick="checkAnswer('C')"></div>
+                <div class="choice" id="D" onclick="checkAnswer('D')"></div>
+            </div>
+            <div id="timer">
+                <div id="counter"></div>
                 <div id="btimeGauge"></div>
                 <div id="timeGauge"></div>
             </div>
-        <div id="choices">
-            <div class="choice" id="A" onclick="checkAnswer('A')">A</div>
-            <div class="choice" id="B" onclick="checkAnswer('B')">B</div>
-            <div class="choice" id="C" onclick="checkAnswer('C')">C</div>
-            <div class="choice" id="D" onclick="checkAnswer('D')">D</div>
+            <div id="progress"></div>
         </div>
-        <div id="progress"> <div class="prog"></div>
+        <div id="scoreContainer" style="display: none"></div>
     </div>
-<div id="scoreContainer" style = "display : none;" >
-    <img src="smile.png"><p>50%</p>
-</div>
-<script src="script.js"></script>
+    <script src="./Assets/script.js"></script>
 </body>
 </html>
