--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="start">Start Quiz!</div>
         <div id="leaderboard">High Score
             <p id="first"></p>
+            <ol id="rankings"></ol>
         </div>
         <div id="quiz" style="display: none">
             <div id="question"></div>
