--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container">
         <div id="start">Start Quiz!</div>
-        <div id="leaderboard">High Score
+        <div id="leaderboard">High Scores
             <p id="first"></p>
             <ol id="rankings"></ol>
         </div>
